--- a/account/i18n/ru.po
+++ b/account/i18n/ru.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-07-16 14:34+0000\n"
+"PO-Revision-Date: 2013-07-26 12:04+0000\n"
 "Last-Translator: Chertykov Denis <chertykov@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-17 07:25+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-27 05:27+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: account
 #: model:process.transition,name:account.process_transition_supplierreconcilepaid0
@@ -11051,7 +11051,7 @@ msgstr "Банковские счета"
 #. module: account
 #: field:res.partner,credit:0
 msgid "Total Receivable"
-msgstr "Всго к получению"
+msgstr "Всего к получению"
 
 #. module: account
 #: view:account.move.line:0
