--- a/purchase_requisition/i18n/ru.po
+++ b/purchase_requisition/i18n/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-07-24 12:42+0000\n"
+"PO-Revision-Date: 2013-07-26 10:21+0000\n"
 "Last-Translator: Chertykov Denis <chertykov@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-25 05:44+0000\n"
+"X-Launchpad-Export-Date: 2013-07-27 05:28+0000\n"
 "X-Generator: Launchpad (build 16700)\n"
 
 #. module: purchase_requisition
@@ -327,7 +327,7 @@ msgstr ""
 #. module: purchase_requisition
 #: view:purchase.requisition:0
 msgid "Cancel Purchase Order"
-msgstr "Отменить заказ на закупку"
+msgstr "Отмена заказа закупки"
 
 #. module: purchase_requisition
 #: model:ir.model,name:purchase_requisition.model_purchase_order
@@ -359,7 +359,7 @@ msgstr "Новый запрос на закупку"
 #. module: purchase_requisition
 #: view:purchase.requisition:0
 msgid "Products"
-msgstr "ТМЦ"
+msgstr "Продукция"
 
 #. module: purchase_requisition
 #: view:purchase.requisition:0
