--- a/sale_crm/i18n/ru.po
+++ b/sale_crm/i18n/ru.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-07-24 06:41+0000\n"
+"PO-Revision-Date: 2013-07-26 12:15+0000\n"
 "Last-Translator: Chertykov Denis <chertykov@gmail.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-25 05:44+0000\n"
+"X-Launchpad-Export-Date: 2013-07-27 05:28+0000\n"
 "X-Generator: Launchpad (build 16700)\n"
 
 #. module: sale_crm
@@ -142,7 +142,7 @@ msgstr "Отдел продаж"
 #. module: sale_crm
 #: view:crm.lead:0
 msgid "Create Quotation"
-msgstr "Создать заявку"
+msgstr "Создать предложение цен"
 
 #. module: sale_crm
 #: model:ir.actions.act_window,name:sale_crm.action_crm_make_sale
