--- a/stock/i18n/zh_CN.po
+++ b/stock/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-26 16:11+0000\n"
+"PO-Revision-Date: 2013-07-27 16:12+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-27 05:28+0000\n"
+"X-Launchpad-Export-Date: 2013-07-28 06:34+0000\n"
 "X-Generator: Launchpad (build 16700)\n"
 
 #. module: stock
@@ -2235,7 +2235,7 @@ msgstr "已接收数量"
 #. module: stock
 #: field:stock.production.lot,ref:0
 msgid "Internal Reference"
-msgstr "内部单号"
+msgstr "编号"
 
 #. module: stock
 #: help:stock.production.lot,prefix:0
@@ -3137,6 +3137,14 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                单击为该产品登记一个收货单。\n"
+"              </p><p>\n"
+"                这里可以找到该产品相关的所有收货记录，\n"
+"                以及所有你正在等待的来自供应商的\n"
+"                尚未到达的收货单。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: help:stock.fill.inventory,recursive:0
@@ -3996,7 +4004,7 @@ msgstr ""
 msgid ""
 "As an example, a decimal precision of 2 will allow weights like: 9.99 kg, "
 "whereas a decimal precision of 4 will allow weights like:  0.0231 kg."
-msgstr ""
+msgstr "作为一个例子，十进制精度为2允许重量是这样的：9.99千克，而一个十进制精度为4，将允许重量是这样的，如：0.0231千克。"
 
 #. module: stock
 #: view:report.stock.move:0
@@ -4428,7 +4436,7 @@ msgstr "1月"
 #. module: stock
 #: constraint:stock.move:0
 msgid "You cannot move products from or to a location of the type view."
-msgstr ""
+msgstr "不能将视图类型的库位作为移库单的源库位或者目标库位"
 
 #. module: stock
 #: help:stock.config.settings,group_stock_production_lot:0
@@ -4443,7 +4451,7 @@ msgstr ""
 #, python-format
 msgid ""
 "No product in this location. Please select a location in the product form."
-msgstr ""
+msgstr "该库位没有产品。请从产品表单选择一个库位。"
 
 #. module: stock
 #: model:ir.actions.act_window,name:stock.act_product_stock_move_futur_open
@@ -4511,7 +4519,7 @@ msgstr "库位"
 msgid ""
 "If this shipment was split, then this field links to the shipment which "
 "contains the already processed part."
-msgstr ""
+msgstr "如果这个装运单被分割，该字段将连接到包括了已经处理的部分的装运单。"
 
 #. module: stock
 #: view:stock.inventory:0
@@ -4680,7 +4688,7 @@ msgstr "连锁库位类型"
 #: help:stock.picking.in,min_date:0
 #: help:stock.picking.out,min_date:0
 msgid "Scheduled time for the shipment to be processed"
-msgstr ""
+msgstr "该装运单被处理的计划时间"
 
 #. module: stock
 #: selection:report.stock.inventory,location_type:0
@@ -4725,19 +4733,19 @@ msgstr ""
 #. module: stock
 #: view:stock.picking.in:0
 msgid "Date of Reception"
-msgstr ""
+msgstr "接收的日期"
 
 #. module: stock
 #: help:stock.config.settings,group_stock_multiple_locations:0
 msgid ""
 "This allows to configure and use multiple stock locations and warehouses,\n"
 "                instead of having a single default one."
-msgstr ""
+msgstr "允许配置和使用多个库位和仓库，替换默认的一个。"
 
 #. module: stock
 #: view:stock.picking:0
 msgid "Confirm & Transfer"
-msgstr ""
+msgstr "确认并传递"
 
 #. module: stock
 #: field:stock.location,scrap_location:0
@@ -4854,7 +4862,7 @@ msgstr "准备处理"
 #. module: stock
 #: report:stock.picking.list:0
 msgid "Warehouse Address :"
-msgstr ""
+msgstr "仓库地址："
 
 #~ msgid "_Cancel"
 #~ msgstr "取消(_C)"
