--- a/base_action_rule/i18n/fr.po
+++ b/base_action_rule/i18n/fr.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-28 05:58+0000\n"
+"PO-Revision-Date: 2013-07-28 18:37+0000\n"
 "Last-Translator: Dewinne Julien <Unknown>\n"
 "Language-Team: French <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-28 06:34+0000\n"
+"X-Launchpad-Export-Date: 2013-07-29 05:54+0000\n"
 "X-Generator: Launchpad (build 16700)\n"
 
 #. module: base_action_rule
@@ -83,7 +83,7 @@ msgstr "base.action.rule.lead.test"
 #. module: base_action_rule
 #: selection:base.action.rule.lead.test,state:0
 msgid "Closed"
-msgstr ""
+msgstr "Fermé"
 
 #. module: base_action_rule
 #: selection:base.action.rule.lead.test,state:0
