--- a/sale/i18n/zh_CN.po
+++ b/sale/i18n/zh_CN.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-06 08:30+0000\n"
+"PO-Revision-Date: 2013-07-28 14:48+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:21+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-29 05:54+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: sale
 #: model:ir.model,name:sale.model_account_config_settings
@@ -394,7 +394,7 @@ msgid ""
 "percentage of the sales order\n"
 "                    or a fixed price (for advances) directly from the sales "
 "order form if you prefer."
-msgstr ""
+msgstr "这些订单行的所有项目将被开票。你也能按订单的比例开票，如果你喜欢，也能直接从订单表单的以固定价格（预付款）开票。"
 
 #. module: sale
 #: field:sale.order,message_summary:0
@@ -873,6 +873,14 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                单击以创建一个新的销售商店。\n"
+"              </p><p>\n"
+"                每个报价单或者销售订单必须管理到一个商店。\n"
+"                每个商店定义了仓库，每一次销售都从这个仓库发货。\n"
+"                \n"
+"              </p>\n"
+"            "
 
 #. module: sale
 #: field:sale.order,message_is_follower:0
@@ -1037,6 +1045,15 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                单击以创建一个报价单，这是每次销售的第一步。\n"
+"              </p><p>\n"
+"                OpenERP 将帮你完成一个完整的销售流程:\n"
+"                从报价到销售订单，发运，开票和支付信息的归集。\n"
+"              </p><p>\n"
+"                社交特性将帮你组织每个销售订单的讨论，并且允许你的客户跟踪销售订单的进度\n"
+"              </p>\n"
+"            "
 
 #. module: sale
 #: selection:sale.order.line,type:0
