--- a/stock/i18n/zh_CN.po
+++ b/stock/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-07-27 16:12+0000\n"
+"PO-Revision-Date: 2013-07-28 14:28+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-28 06:34+0000\n"
+"X-Launchpad-Export-Date: 2013-07-29 05:55+0000\n"
 "X-Generator: Launchpad (build 16700)\n"
 
 #. module: stock
@@ -3997,7 +3997,7 @@ msgstr "关注者"
 #: code:addons/stock/stock.py:2590
 #, python-format
 msgid "Cannot consume a move with negative or zero quantity."
-msgstr ""
+msgstr "消耗的移库数量不能小于等于0。"
 
 #. module: stock
 #: help:stock.config.settings,decimal_precision:0
@@ -4444,7 +4444,7 @@ msgid ""
 "This allows you to manage products by using serial numbers. When you select "
 "a serial number on product moves, you can get the upstream or downstream "
 "traceability of that product."
-msgstr ""
+msgstr "允许你使用序列号管理产品。当你在产品移库时选择了一个序列号，你能获得对产品的上游和下游的可追溯性。"
 
 #. module: stock
 #: code:addons/stock/wizard/stock_fill_inventory.py:124
