--- a/personal_base/i18n/pt_BR.po
+++ b/personal_base/i18n/pt_BR.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2009-11-26 10:50+0000\n"
-"PO-Revision-Date: 2013-07-21 12:31+0000\n"
+"PO-Revision-Date: 2013-07-29 08:23+0000\n"
 "Last-Translator: Claudio de Araujo Santos <claudioaraujosantos@gmail.com>\n"
 "Language-Team: Brazilian Portuguese <pt_BR@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-22 05:43+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-07-30 04:43+0000\n"
+"X-Generator: Launchpad (build 16700)\n"
 
 #. module: personal_base
 #: model:ir.actions.wizard,name:personal_base.wizard_after_login
@@ -73,227 +73,229 @@ msgstr "Negativo"
 #. module: personal_base
 #: field:personal.base.account.entry.line,debit_amount:0
 msgid "Debit Amount"
-msgstr ""
+msgstr "Valor do Débito"
 
 #. module: personal_base
 #: field:personal.base.account.entry,state:0
 #: field:personal.base.account.entry.line,state:0
 msgid "State"
-msgstr ""
+msgstr "Situação"
 
 #. module: personal_base
 #: selection:personal.base.account.entry,state:0
 #: selection:personal.base.account.entry.line,state:0
 msgid "Draft"
-msgstr ""
+msgstr "Rascunho"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_account_entries_list
 #: model:ir.ui.menu,name:personal_base.menu_action_account_entries_list
 #: view:personal.base.account.entry:0
 msgid "Account Entries"
-msgstr ""
+msgstr "Entradas Conta"
 
 #. module: personal_base
 #: field:personal.base.account.entry.line,parent_id:0
 msgid "Entry"
-msgstr ""
+msgstr "Entrada"
 
 #. module: personal_base
 #: model:ir.ui.menu,name:personal_base.menu_action_account_form
 msgid "Accounts Definition"
-msgstr ""
+msgstr "Contas definição"
 
 #. module: personal_base
 #: model:ir.module.module,shortdesc:personal_base.module_meta_information
 msgid "Personal Base"
-msgstr ""
+msgstr "Base de dados pessoais"
 
 #. module: personal_base
 #: model:ir.model,name:personal_base.model_personal_base_account_type
 #: field:personal.base.account,type_id:0
 #: view:personal.base.account.type:0
 msgid "Account Type"
-msgstr ""
+msgstr "Tipo de Conta"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_account_tree
 #: model:ir.ui.menu,name:personal_base.menu_action_account_tree
 #: view:personal.base.account:0
 msgid "Chart of Accounts"
-msgstr ""
+msgstr "Plano de Contas"
 
 #. module: personal_base
 #: field:res.users,created:0
 msgid "Created"
-msgstr ""
+msgstr "Criado"
 
 #. module: personal_base
 #: field:personal.base.account,name:0
 #: field:personal.base.action.login,name:0
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #. module: personal_base
 #: field:personal.base.account.entry.line,amount_base:0
 msgid "Amount Base"
-msgstr ""
+msgstr "Valor Base"
 
 #. module: personal_base
 #: view:personal.base.account.entry:0
 msgid "Return"
-msgstr ""
+msgstr "Voltar"
 
 #. module: personal_base
 #: field:personal.base.account.entry,name:0
 #: field:personal.base.account.entry.line,name:0
 msgid "Description"
-msgstr ""
+msgstr "Description"
 
 #. module: personal_base
 #: view:personal.base.account:0
 #: view:personal.base.account.entry:0
 msgid "General Information"
-msgstr ""
+msgstr "General Information"
 
 #. module: personal_base
 #: model:ir.model,name:personal_base.model_personal_base_action_login
 msgid "personal.base.action.login"
-msgstr ""
+msgstr "personal.base.action.login"
 
 #. module: personal_base
 #: constraint:ir.model:0
 msgid ""
 "The Object name must start with x_ and not contain any special character !"
 msgstr ""
+"O nome do objeto deve iniciar com x_ e não conter qualquer caractere "
+"especial!"
 
 #. module: personal_base
 #: view:personal.base.account.entry.line:0
 msgid "Account Entry Lines"
-msgstr ""
+msgstr "Conta linhas de entrada"
 
 #. module: personal_base
 #: field:personal.base.account,parent_id:0
 msgid "Parent Code"
-msgstr ""
+msgstr "Código da Conta-pai"
 
 #. module: personal_base
 #: field:res.users,first_login:0
 msgid "First Login"
-msgstr ""
+msgstr "Primeiro Entrar"
 
 #. module: personal_base
 #: field:personal.base.account,child_ids:0
 msgid "Child Codes"
-msgstr ""
+msgstr "Códigos derivados (sub-contas)"
 
 #. module: personal_base
 #: field:personal.base.account,user_id:0
 #: field:personal.base.account.entry,user_id:0
 #: field:personal.base.account.entry.line,user_id:0
 msgid "User"
-msgstr ""
+msgstr "Usuario"
 
 #. module: personal_base
 #: field:personal.base.account.entry,line_ids:0
 msgid "Entries"
-msgstr ""
+msgstr "Lançamentos"
 
 #. module: personal_base
 #: field:personal.base.account.entry,date:0
 #: field:personal.base.account.entry.line,date:0
 msgid "Date"
-msgstr ""
+msgstr "Date"
 
 #. module: personal_base
 #: constraint:ir.ui.view:0
 msgid "Invalid XML for View Architecture!"
-msgstr ""
+msgstr "Inválido XML para Ver Arquitetura!"
 
 #. module: personal_base
 #: model:ir.model,name:personal_base.model_personal_base_account
 #: view:personal.base.account:0
 #: field:personal.base.account.entry.line,account_id:0
 msgid "Account"
-msgstr ""
+msgstr "Conta"
 
 #. module: personal_base
 #: field:res.users,currency_id:0
 msgid "Default Currency"
-msgstr ""
+msgstr "Moeda padrão"
 
 #. module: personal_base
 #: field:personal.base.account.entry,created_in_model_id:0
 msgid "Created in Model"
-msgstr ""
+msgstr "Criado em Modelo"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_confirmed_account_entries_list
 #: model:ir.ui.menu,name:personal_base.menu_action_confirmed_account_entries_list
 msgid "Confirmed Account Entries"
-msgstr ""
+msgstr "Confirmados entradas Conta"
 
 #. module: personal_base
 #: view:personal.base.account:0
 #: view:personal.base.account.entry:0
 msgid "Notes"
-msgstr ""
+msgstr "Notas"
 
 #. module: personal_base
 #: model:ir.model,name:personal_base.model_personal_base_account_entry_line
 #: view:personal.base.account.entry.line:0
 msgid "Account Entry Line"
-msgstr ""
+msgstr "Linha de lançamento de conta"
 
 #. module: personal_base
 #: field:personal.base.account,note:0
 #: field:personal.base.account.entry,note:0
 msgid "Note"
-msgstr ""
+msgstr "Nota"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_personal_base_action_login_list
 #: model:ir.ui.menu,name:personal_base.menu_action_personal_base_action_login_list
 msgid "Actions After Login"
-msgstr ""
+msgstr "Ações apos o logon"
 
 #. module: personal_base
 #: field:personal.base.account.entry.line,amount_base_with_sign:0
 msgid "Amount"
-msgstr ""
+msgstr "Amount"
 
 #. module: personal_base
 #: field:personal.base.action.login,action_id:0
 msgid "Action"
-msgstr ""
+msgstr "Ação"
 
 #. module: personal_base
 #: field:personal.base.account.entry.line,credit_amount:0
 msgid "Credit Amount"
-msgstr ""
+msgstr "Valor do Crédito"
 
 #. module: personal_base
 #: field:personal.base.account,balance:0
 #: field:personal.base.account.entry.line,balance:0
 msgid "Balance"
-msgstr ""
+msgstr "Saldo"
 
 #. module: personal_base
 #: field:res.users,email:0
 msgid "E-Mail Address"
-msgstr ""
+msgstr "E-Mail"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_account_entry_form_form
 #: model:ir.ui.menu,name:personal_base.menu_action_account_entry_form_form
 msgid "New Account Entry"
-msgstr ""
+msgstr "Nova entrada Conta"
 
 #. module: personal_base
 #: model:ir.model,name:personal_base.model_personal_base_account_entry
 #: view:personal.base.account.entry:0
 msgid "Account Entry"
-msgstr ""
+msgstr "Lançamento Contábil"
 
 #. module: personal_base
 #: field:personal.base.account,unit_test:0
@@ -301,54 +303,54 @@ msgstr ""
 #: field:personal.base.account.entry.line,unit_test:0
 #: field:res.users,unit_test:0
 msgid "unit_test"
-msgstr ""
+msgstr "unit_test"
 
 #. module: personal_base
 #: field:personal.base.account.entry.line,currency_rate:0
 msgid "Currency Rate"
-msgstr ""
+msgstr "Taxa de Câmbio"
 
 #. module: personal_base
 #: field:personal.base.account.type,sign:0
 msgid "Sign"
-msgstr ""
+msgstr "Assinar"
 
 #. module: personal_base
 #: field:personal.base.account,currency_id:0
 #: field:personal.base.account.entry,currency_id:0
 #: field:personal.base.account.entry.line,currency_id:0
 msgid "Currency"
-msgstr ""
+msgstr "Moeda"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_account_form
 msgid "Accounts"
-msgstr ""
+msgstr "Contas"
 
 #. module: personal_base
 #: model:ir.actions.wizard,name:personal_base.wizard_create_account_types
 #: model:ir.ui.menu,name:personal_base.menu_wizard_create_account_types
 msgid "Create Account Types"
-msgstr ""
+msgstr "Criar tipos de conta"
 
 #. module: personal_base
 #: model:ir.module.module,description:personal_base.module_meta_information
 msgid "Sandas Personal Financials base module."
-msgstr ""
+msgstr "Sandas módulo base pessoal Financials."
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_account_type_form
 #: model:ir.ui.menu,name:personal_base.menu_action_account_type_form
 msgid "Account Types"
-msgstr ""
+msgstr "Tipos de Conta"
 
 #. module: personal_base
 #: field:personal.base.account.type,name:0
 msgid "Acc. Type Name"
-msgstr ""
+msgstr "Acc. Digite Nome"
 
 #. module: personal_base
 #: model:ir.actions.act_window,name:personal_base.action_draft_account_entries_list
 #: model:ir.ui.menu,name:personal_base.menu_action_draft_account_entries_list
 msgid "Draft Account Entries"
-msgstr ""
+msgstr "Projecto entradas Conta"
