Launchpad automatic translations update.

--- a/stock/i18n/zh_CN.po
+++ b/stock/i18n/zh_CN.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-08-10 02:27+0000\n"
+"PO-Revision-Date: 2013-08-11 01:41+0000\n"
 "Last-Translator: 盈通 ccdos <ccdos@163.com>\n"
 "Language-Team: Chinese (Simplified) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-08-10 05:38+0000\n"
+"X-Launchpad-Export-Date: 2013-08-11 05:00+0000\n"
 "X-Generator: Launchpad (build 16723)\n"
 
 #. module: stock
@@ -3627,6 +3627,19 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                添加库位。\n"
+"              </p><p>\n"
+"                定义库位以反映你的仓库结构和组织。OpenERP 能够管理物理库\n"
+"                位(仓库, 货架, 箱子,等等), 合作伙伴库位 (客户,供应商)以及虚拟库\n"
+"                位（用于对应比如制造单消耗，库存盘点等等库存操作）。\n"
+"              </p><p>  \n"
+"                Openerp的每一个库存操作都是将产品从一个库位移动到另外一个\n"
+"                库位。 例如, 如果你从供应商那里收到产品，Openerp将移动把产\n"
+"                品从供应商库位移动到库存库位。每一个报表都能从物理的，合作\n"
+"               伙伴的或者虚拟的库位上打开。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: field:stock.fill.inventory,recursive:0
@@ -3691,6 +3704,13 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                创建一个入库单\n"
+"              </p><p>\n"
+"                入库单是你将从供应商那里接收的所有单据的列表。\n"
+"                一个入库单包含了根据原始采购订单接收的产品的列表。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: view:stock.move:0
@@ -4209,6 +4229,8 @@ msgid ""
 "this quantity on assigned moves affects the product reservation, and should "
 "be done with care."
 msgstr ""
+"这是一个库存点的产品数量。对于状态为“完成”的调拨单，这就是真正完成了调拨的产品数量。对于其它调拨单，就是计划进行调拨的数量。降低这个数量不会生成延期交货"
+"单。改变这个指定的调拨数量将影响产品预订，应该慎之又慎。"
 
 #. module: stock
 #: help:stock.location,valuation_in_account_id:0
@@ -4828,6 +4850,16 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                添加一个序列号。\n"
+"              </p><p>\n"
+"                这是你记录的所有产品的批号。当你选择了一个批号，\n"
+"                你能获得批号中包括的产品的上下游的可追踪性。\n"
+"                默认情况下，此列表过滤出了你仓库中可用的序列号，\n"
+"                但是你可以通过不选择“可用”按钮来获得接收或者发运\n"
+"                给客户的产品的所有批次。\n"
+"              </p>\n"
+"            "
 
 #. module: stock
 #: view:stock.picking.in:0
