Launchpad automatic translations update.

--- a/crm/i18n/pt.po
+++ b/crm/i18n/pt.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-08-14 16:41+0000\n"
+"PO-Revision-Date: 2013-08-16 14:19+0000\n"
 "Last-Translator: Ricardo Santa Ana <ricardosantana@gmail.com>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-08-15 05:50+0000\n"
+"X-Launchpad-Export-Date: 2013-08-17 06:16+0000\n"
 "X-Generator: Launchpad (build 16723)\n"
 
 #. module: crm
@@ -131,7 +131,7 @@ msgstr "Formação"
 #: model:ir.actions.act_window,name:crm.crm_lead_categ_action
 #: model:ir.ui.menu,name:crm.menu_crm_lead_categ
 msgid "Sales Tags"
-msgstr ""
+msgstr "Etiquetas de Venda"
 
 #. module: crm
 #: view:crm.lead.report:0
@@ -1729,7 +1729,7 @@ msgstr "O parceiro foi <b>criado</b>."
 #. module: crm
 #: field:sale.config.settings,module_crm_claim:0
 msgid "Manage Customer Claims"
-msgstr ""
+msgstr "Gerir Reclamações dos Clientes"
 
 #. module: crm
 #: model:ir.actions.act_window,help:crm.action_report_crm_lead
