--- a/account_report_company/i18n/pt.po
+++ b/account_report_company/i18n/pt.po
@@ -8,19 +8,19 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-08-14 15:42+0000\n"
+"PO-Revision-Date: 2013-08-16 14:07+0000\n"
 "Last-Translator: Ricardo Santa Ana <ricardosantana@gmail.com>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-08-15 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-08-17 06:16+0000\n"
 "X-Generator: Launchpad (build 16723)\n"
 
 #. module: account_report_company
 #: field:res.partner,display_name:0
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #. module: account_report_company
 #: field:account.invoice,commercial_partner_id:0
@@ -31,19 +31,19 @@ msgstr "Entidade Comercial"
 #. module: account_report_company
 #: field:account.invoice.report,commercial_partner_id:0
 msgid "Partner Company"
-msgstr ""
+msgstr "Empresa Parceira"
 
 #. module: account_report_company
 #: model:ir.model,name:account_report_company.model_account_invoice
 msgid "Invoice"
-msgstr ""
+msgstr "Factura"
 
 #. module: account_report_company
 #: view:account.invoice:0
 #: view:account.invoice.report:0
 #: model:ir.model,name:account_report_company.model_res_partner
 msgid "Partner"
-msgstr ""
+msgstr "Parceiro"
 
 #. module: account_report_company
 #: model:ir.model,name:account_report_company.model_account_invoice_report
