--- a/mail/i18n/pt.po
+++ b/mail/i18n/pt.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-08-14 15:49+0000\n"
-"Last-Translator: Andrei Talpa (multibase.pt) <andrei.talpa@multibase.pt>\n"
+"PO-Revision-Date: 2013-08-16 14:33+0000\n"
+"Last-Translator: Ricardo Santa Ana <ricardosantana@gmail.com>\n"
 "Language-Team: Portuguese <pt@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-08-15 05:51+0000\n"
+"X-Launchpad-Export-Date: 2013-08-17 06:16+0000\n"
 "X-Generator: Launchpad (build 16723)\n"
 
 #. module: mail
@@ -26,7 +26,7 @@ msgstr ""
 #: code:addons/mail/mail_thread.py:246
 #, python-format
 msgid "%s created"
-msgstr ""
+msgstr "%s criado"
 
 #. module: mail
 #: field:mail.compose.message,author_id:0
@@ -109,7 +109,7 @@ msgstr "Público"
 #: code:addons/mail/static/src/xml/mail.xml:277
 #, python-format
 msgid "to"
-msgstr ""
+msgstr "para"
 
 #. module: mail
 #: view:mail.mail:0
@@ -151,7 +151,7 @@ msgstr ""
 #. module: mail
 #: field:mail.message.subtype,parent_id:0
 msgid "Parent"
-msgstr ""
+msgstr "Ascendente"
 
 #. module: mail
 #: help:res.partner,notification_email_send:0
@@ -196,7 +196,7 @@ msgstr "Deseja mesmo apagar esta mensagem?"
 #: view:mail.message:0
 #: field:mail.notification,read:0
 msgid "Read"
-msgstr ""
+msgstr "Ler"
 
 #. module: mail
 #: view:mail.group:0
