Launchpad automatic translations update.

--- a/account_analytic_analysis/i18n/hr.po
+++ b/account_analytic_analysis/i18n/hr.po
@@ -8,25 +8,25 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-09-18 14:44+0000\n"
+"Last-Translator: Marko Carevic <Unknown>\n"
 "Language-Team: Croatian <hr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 05:46+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-09-19 04:55+0000\n"
+"X-Generator: Launchpad (build 16765)\n"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "No order to invoice, create"
-msgstr ""
+msgstr "Nema naloga za fakturiranje, stvori"
 
 #. module: account_analytic_analysis
 #: code:addons/account_analytic_analysis/account_analytic_analysis.py:547
 #, python-format
 msgid "Timesheets to Invoice of %s"
-msgstr ""
+msgstr "Kontrolne kartice za fakturirati od %s"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -36,7 +36,7 @@ msgstr "Grupiraj po..."
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Template"
-msgstr ""
+msgstr "Predložak"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -56,7 +56,7 @@ msgstr "Realna marža(%)"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "End date passed or prepaid unit consumed"
-msgstr ""
+msgstr "Prekoračen završni datum ili potrošena pretplata"
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,last_worked_date:0
@@ -76,7 +76,7 @@ msgstr "⇒ račun"
 #. module: account_analytic_analysis
 #: field:account.analytic.account,ca_invoiced:0
 msgid "Invoiced Amount"
-msgstr "Iznos na računu"
+msgstr "Fakturirani iznos"
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,last_worked_invoiced_date:0
@@ -86,7 +86,7 @@ msgstr "Zadnje fakturiranje troška"
 #. module: account_analytic_analysis
 #: help:account.analytic.account,fix_price_to_invoice:0
 msgid "Sum of quotations for this contract."
-msgstr ""
+msgstr "Suma ponuda za ovaj ugovor"
 
 #. module: account_analytic_analysis
 #: model:ir.actions.act_window,help:account_analytic_analysis.action_sales_order
@@ -101,6 +101,16 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p class=\"oe_view_nocontent_create\">\n"
+"                Kliknite za izradu ponude koja se može konvertirati u "
+"prodajni\n"
+"               nalog.\n"
+"              </p><p>\n"
+"                Koristite prodajne naloge za praćenje svega što treba biti "
+"fakturirano\n"
+"                po fiksnoj cijeni na ugovoru.\n"
+"              </p>\n"
+"            "
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,ca_invoiced:0
@@ -110,40 +120,40 @@ msgstr "Ukupno fakturirani iznos."
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Cancelled"
-msgstr ""
+msgstr "Poništeno"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,timesheet_ca_invoiced:0
 msgid "Sum of timesheet lines invoiced for this contract."
-msgstr ""
+msgstr "Suma stavaka kontrole kartice fakturiranih za ovaj ugovor."
 
 #. module: account_analytic_analysis
 #: model:email.template,subject:account_analytic_analysis.account_analytic_cron_email_template
 msgid "Contract expiration reminder ${user.company_id.name}"
-msgstr ""
+msgstr "Podsjetnik za istek ugovora ${user.company_id.name}"
 
 #. module: account_analytic_analysis
 #: code:addons/account_analytic_analysis/account_analytic_analysis.py:464
 #, python-format
 msgid "Sales Order Lines of %s"
-msgstr ""
+msgstr "Stavke prodajnog naloga od %s"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "End date is in the next month"
-msgstr ""
+msgstr "Datum završetka je u sljedećem mjesecu"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,revenue_per_hour:0
 msgid "Computed using the formula: Invoiced Amount / Total Time"
-msgstr ""
+msgstr "Izračunato korištenjem formule: fakturirani iznos / ukupno vrijeme"
 
 #. module: account_analytic_analysis
 #: field:account_analytic_analysis.summary.month,account_id:0
 #: field:account_analytic_analysis.summary.user,account_id:0
 #: model:ir.model,name:account_analytic_analysis.model_account_analytic_account
 msgid "Analytic Account"
-msgstr "Konto analitike"
+msgstr "Analitički konto"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -153,7 +163,7 @@ msgstr "Partner"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Contracts that are not assigned to an account manager."
-msgstr ""
+msgstr "Ugovori koji nisu pridruženi manageru klijenta"
 
 #. module: account_analytic_analysis
 #: model:ir.actions.act_window,help:account_analytic_analysis.action_account_analytic_overdue
@@ -173,6 +183,19 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
+"<p/> class=\"oe_view_nocontent_create\">\n"
+"Kliknite za definiranje novog ugovor.\n"
+"</ p> <p>\n"
+"Ovdje ćete pronaći ugovore  koje treba obnoviti jer\n"
+"prošao datum završetka ili je radni napor veći od\n"
+"maksimalno ovlaštenog.\n"
+"</ p> <p>\n"
+"OpenERP automatski postavlja ugovore koji se trebaju obnaviti u status 'na "
+"čekanju'.  \n"
+"Nakon pregovora, prodavač bi trebao zatvoriti ili obnoviti\n"
+"ugovore na čekanju.\n"
+"</ p>\n"
+"            "
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -182,12 +205,12 @@ msgstr "Datum završetka"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Account Manager"
-msgstr ""
+msgstr "Manager zadužen za klijenta"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,remaining_hours_to_invoice:0
 msgid "Computed using the formula: Maximum Time - Total Invoiced Time"
-msgstr ""
+msgstr "Izračunato kao: maksimalno vrijeme - ukupno fakturirano vrijeme"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -197,17 +220,17 @@ msgstr "Očekivano"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Closed contracts"
-msgstr ""
+msgstr "Zatvoreni ugovori"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,theorical_margin:0
 msgid "Computed using the formula: Theoretical Revenue - Total Costs"
-msgstr ""
+msgstr "Izračunato kao: Teoretski prihod - ukupni trošak"
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,hours_qtt_invoiced:0
 msgid "Invoiced Time"
-msgstr ""
+msgstr "Fakturirano vrijeme"
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,fix_price_to_invoice:0
@@ -227,29 +250,29 @@ msgstr ""
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Pricelist"
-msgstr ""
+msgstr "Cjenik"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,remaining_hours:0
 msgid "Computed using the formula: Maximum Time - Total Worked Time"
-msgstr ""
+msgstr "Izračunato kao: maksimalno vrijeme - ukupno odrađeno vrijeme"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,hours_quantity:0
 msgid ""
 "Number of time you spent on the analytic account (from timesheet). It "
 "computes quantities on all journal of type 'general'."
-msgstr ""
+msgstr "Vrijeme provedeno na analitičkom računu (iz evidencije rada)."
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Nothing to invoice, create"
-msgstr ""
+msgstr "Ništa za fakturiranje, stvori"
 
 #. module: account_analytic_analysis
 #: model:res.groups,name:account_analytic_analysis.group_template_required
 msgid "Mandatory use of templates in contracts"
-msgstr ""
+msgstr "Obvezno korištenje predložaka u ugovorima"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,last_worked_invoiced_date:0
@@ -263,7 +286,7 @@ msgstr ""
 #. module: account_analytic_analysis
 #: field:account.analytic.account,hours_quantity:0
 msgid "Total Worked Time"
-msgstr ""
+msgstr "Ukupno odrađeno vrijeme"
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,real_margin:0
@@ -280,7 +303,7 @@ msgstr ""
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Contracts assigned to a customer."
-msgstr ""
+msgstr "Ugovori dodijeljeni kupcu"
 
 #. module: account_analytic_analysis
 #: model:ir.model,name:account_analytic_analysis.model_account_analytic_analysis_summary_month
@@ -290,17 +313,17 @@ msgstr "Uk. sati po mjesecima"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Pending contracts"
-msgstr ""
+msgstr "Ugovori na čekanju"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,real_margin_rate:0
 msgid "Computes using the formula: (Real Margin / Total Costs) * 100."
-msgstr "Computes using the formula: (Real Margin / Total Costs) * 100."
+msgstr "Izračunato kao: (realna marža / ukupni trošak) * 100"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "or view"
-msgstr ""
+msgstr "ili pogled"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -310,7 +333,7 @@ msgstr "Nadređeni"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Units Consumed"
-msgstr ""
+msgstr "Potrošeno"
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,month_ids:0
@@ -322,7 +345,7 @@ msgstr "Mjesec"
 #: model:ir.actions.act_window,name:account_analytic_analysis.action_hr_tree_invoiced_all
 #: model:ir.ui.menu,name:account_analytic_analysis.menu_action_hr_tree_invoiced_all
 msgid "Time & Materials to Invoice"
-msgstr ""
+msgstr "Vrijeme i materijali za fakturiranje"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -332,7 +355,7 @@ msgstr "Početni datum"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Expiring soon"
-msgstr ""
+msgstr "Uskoro ističe"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -412,12 +435,12 @@ msgstr ""
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Timesheets"
-msgstr ""
+msgstr "Evidencija rada"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Closed"
-msgstr ""
+msgstr "Zatvoreno"
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,hours_qtt_non_invoiced:0
@@ -425,11 +448,13 @@ msgid ""
 "Number of time (hours/days) (from journal of type 'general') that can be "
 "invoiced if you invoice based on analytic account."
 msgstr ""
+"Vrijeme (sati / dani) (iz dnevnika tipa 'općenito') koje se može fakturirati "
+"ako se fakturira na temelju analitičkog konta."
 
 #. module: account_analytic_analysis
 #: field:account.analytic.account,is_overdue_quantity:0
 msgid "Overdue Quantity"
-msgstr ""
+msgstr "Zakašnjela količina"
 
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
@@ -462,7 +487,7 @@ msgstr "Prodajni nalozi"
 #. module: account_analytic_analysis
 #: help:account.analytic.account,last_invoice_date:0
 msgid "If invoice from the costs, this is the date of the latest invoiced."
-msgstr ""
+msgstr "Ako je akturirano iz troškova, ovo je datum zadnje fakturiranog."
 
 #. module: account_analytic_analysis
 #: help:account.analytic.account,ca_theorical:0
@@ -483,7 +508,7 @@ msgstr "Korisnik"
 #. module: account_analytic_analysis
 #: view:account.analytic.account:0
 msgid "Cancelled contracts"
-msgstr ""
+msgstr "Otkazani ugovori"
 
 #. module: account_analytic_analysis
 #: model:ir.actions.act_window,help:account_analytic_analysis.template_of_contract_action
